--- a/htdocs/BBBC031/index.html
+++ b/htdocs/BBBC031/index.html
@@ -6,7 +6,7 @@
     <link href="../bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link href="../bbbc_stylesheet.css" type="text/css" rel="stylesheet"/>
   </head>
-  
+
   <body>
     <div class="container">
       <header class="page-header">
@@ -17,7 +17,7 @@
 	<h1>Broad Bioimage Benchmark Collection</h1>
 	<p class="lead">Annotated biological image sets for testing and validation</p>
       </header>
-      
+
       <div class="tabbable tabs-left">
 	<ul class="nav nav-tabs">
 	  
@@ -41,11 +41,13 @@
 	      <dd>Outlines of objects</dd>
 	      <dt><a href="../benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></dt>
 	      <dd>Biological labels</dd>
+        <dt><a href="../benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a></dt>
+	      <dd>Centroids</dd>
 	    </dl>
 	  </li>
 	</ul>
 
-	<div class="tab-content">	
+	<div class="tab-content">
 	  
 	  <h2>Simulated 24-well plate with synthetic cells</h2>
 	  
@@ -78,7 +80,7 @@
 
 <p><a href="BBBC031_v1_dataset.zip"><i class="icon-download-alt"></i> BBBC031_v1_dataset.zip (56.3MB)</a></p>
 
-    <h3>Ground truth <a href="../benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="../benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></h3>
+    <h3>Ground truth <a href="../benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="../benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a><a href="../benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></h3>
 
     <p>We provide a csv file containing the information of all the generated cells:
         <ul>
