--- a/htdocs/benchmarking.html
+++ b/htdocs/benchmarking.html
@@ -6,7 +6,7 @@
     <link href="bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link href="bbbc_stylesheet.css" type="text/css" rel="stylesheet"/>
   </head>
-  
+
   <body>
     <div class="container">
       <header class="page-header">
@@ -17,7 +17,7 @@
 	<h1>Broad Bioimage Benchmark Collection</h1>
 	<p class="lead">Annotated biological image sets for testing and validation</p>
       </header>
-      
+
       <div class="tabbable tabs-left">
 	<ul class="nav nav-tabs">
 	  
@@ -41,11 +41,13 @@
 	      <dd>Outlines of objects</dd>
 	      <dt><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></dt>
 	      <dd>Biological labels</dd>
+        <dt><a href="benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a></dt>
+	      <dd>Centroids</dd>
 	    </dl>
 	  </li>
 	</ul>
 
-	<div class="tab-content">	
+	<div class="tab-content">
 	  
 	  <h2>Benchmarking methodology</h2>
 	  
@@ -183,13 +185,15 @@
 	and click "Analyze images".  The calculated statistics (Z' factor, V factor,
 	and EC50) will be written to Excel-compatible files.
 	</p>
+  <h3><a name="centroids"><a href="benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a> Centroids</a></h3>
+  <p><i>Description coming soon</i></p>
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-03-06</p>
+        <p>This page last updated 2019-07-03</p>
         
 	</footer>
     </div>
