--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -6,7 +6,7 @@
     <link href="bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link href="bbbc_stylesheet.css" type="text/css" rel="stylesheet"/>
   </head>
-  
+
   <body>
     <div class="container">
       <header class="page-header">
@@ -17,7 +17,7 @@
 	<h1>Broad Bioimage Benchmark Collection</h1>
 	<p class="lead">Annotated biological image sets for testing and validation</p>
       </header>
-      
+
       <div class="tabbable tabs-left">
 	<ul class="nav nav-tabs">
 	  
@@ -41,11 +41,13 @@
 	      <dd>Outlines of objects</dd>
 	      <dt><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></dt>
 	      <dd>Biological labels</dd>
+        <dt><a href="benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a></dt>
+	      <dd>Centroids</dd>
 	    </dl>
 	  </li>
 	</ul>
 
-	<div class="tab-content">	
+	<div class="tab-content">
 	  
 	  <h2>Image sets</h2>
 	  
@@ -341,6 +343,13 @@
 	  <td class="count">144</td>
 	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
 	</tr>
+  <tr>
+    <td><a href="BBBC031">BBBC031</a></td>
+    <td>Simulated 24-well plate with synthetic cells</td>
+    <td>Fluorescent</td>
+    <td class="count">216</td>
+    <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
     <tr>
       <td><a href="BBBC041">BBBC041</a></td>
       <td>P. vivax (malaria) infected human blood smears</td>
