--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,7 +6,7 @@
     <link href="bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link href="bbbc_stylesheet.css" type="text/css" rel="stylesheet"/>
   </head>
-  
+
   <body>
     <div class="container">
       <header class="page-header">
@@ -17,7 +17,7 @@
 	<h1>Broad Bioimage Benchmark Collection</h1>
 	<p class="lead">Annotated biological image sets for testing and validation</p>
       </header>
-      
+
       <div class="tabbable tabs-left">
 	<ul class="nav nav-tabs">
 	  
@@ -41,11 +41,13 @@
 	      <dd>Outlines of objects</dd>
 	      <dt><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></dt>
 	      <dd>Biological labels</dd>
+        <dt><a href="benchmarking.html#centroids" class="badge" rel="tooltip" title="Centroids">X</a></dt>
+	      <dd>Centroids</dd>
 	    </dl>
 	  </li>
 	</ul>
 
-	<div class="tab-content">	
+	<div class="tab-content">
 	  
 	  
 	  <p>The Broad Bioimage Benchmark Collection (BBBC) is a collection of freely downloadable microscopy image sets.  In addition to the images themselves, each set includes a description of the biological application and some type of &quot;ground truth&quot; (expected results).</p>
