--- a/htdocs/BBBC038/index.html
+++ b/htdocs/BBBC038/index.html
@@ -143,13 +143,13 @@
     <p>These datasets will be evaluated in a publication to be submitted. </p>
     <h3>Recommended citation</h3>
 <p>&quot;We used image set <a href="">BBBC038v1</a>, available from the Broad Bioimage Benchmark Collection
-  [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
+  [<a href="https://doi.org/10.1038/s41592-019-0612-7">Caicedo et al., <i>Nature Methods</i>, 2019</a>].&quot;</p>
 
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, the various contributors of the imagesets have waived all copyright and related or neighboring rights to <span property="dct:title">BBBC038v1</span>.</p>
 
   <footer class="footer">
-        <p>This page last updated 2018-08-27</p>
+        <p>This page last updated 2020-02-11</p>
   </footer>
 
 
